--- a/src/board/style.css
+++ b/src/board/style.css
@@ -1,3 +1,7 @@
 .board {
-
+  height: calc(100vh - 120px);
+  width: calc(100vw - 20px);
+  background-color: blue;
+  position: relative;
+  border: 10px red solid;
 }
