--- a/src/ghost/style.css
+++ b/src/ghost/style.css
@@ -1,16 +1,21 @@
-/*
-#E31F23
-#F8B236
-#80CADE
-#E5A1C6
-*/
-
 .ghost {
   width: 50px;
   height: 50px;
+  position: absolute;
 }
 
-.ghost svg path {
+.ghost-red {
   fill: #E31F23;
-  stroke: palegoldenrod;
+}
+
+.ghost-yellow {
+  fill: #F8B236;
+}
+
+.ghost-blue {
+  fill: #80CADE;
+}
+
+.ghost-pink {
+  fill: #E5A1C6;
 }
