--- a/src/header/style.css
+++ b/src/header/style.css
@@ -1,11 +1,23 @@
 .header {
-
+  height: 100px;
+  background-color: red;
+  color: yellow;
+  display: flex;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .header .title {
-
+  font-size: 40px;
+  width: 50%;
+  text-align: left;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 .header .score {
-
+  font-size: 40px;
+  width: 50%;
+  text-align: right;
+  margin-top: 10px;
 }
