--- a/src/header/style.css
+++ b/src/header/style.css
@@ -1,6 +1,6 @@
 .header {
   height: 100px;
-  background-color: red;
+  background-color: rgb(0, 0, 0);
   color: yellow;
   display: flex;
   padding-left: 10px;
